--- a/pacify-react/package.json
+++ b/pacify-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,6 +12,7 @@
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "antd": "^4.2.0",
+    "apollo-boost": "^0.4.9",
     "d3": "^5.15.0",
     "graphql": "^15.0.0",
     "i": "^0.3.6",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "babel-plugin-module-resolver": "^4.0.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
