--- a/pacify-react/tsconfig.json
+++ b/pacify-react/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2017",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,6 +20,7 @@
     "noEmit": true,
     "jsx": "react",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
